--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
+
+@layer utilities {
+  .grid-cols-fill {
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  }
+}
+
 @tailwind utilities;
